<?xml version="1.0"?>
<package format="2">
  <name>ros_tutorials_service</name>
  <version>0.0.0</version>
  <description>The ros_tutorials_service package</description>
  <maintainer email="maedalab@todo.todo">maedalab</maintainer>

  <license>Apache license 2.0</license>

  <author email="s1424@st.sasebo.ac.jp">Sora Nagao</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msg</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <export>
  </export>
</package>
